src/test/ui/not-default-closure.stderr
error[E0277]: the trait bound `[closure@$DIR/not-default-closure.rs:10:17: 12:6]: Default` is not satisfied
  --> $DIR/not-default-closure.rs:14:5
   |
LL | fn test_default<F: Default + Fn()>(_: F) {
   |                    ------- required by this bound in `test_default`
...
LL |     let hello = move || {
   |                 ------- consider calling this closure
...
LL |     test_default(hello);
   |     ^^^^^^^^^^^^ the trait `Default` is not implemented for `[closure@$DIR/not-default-closure.rs:10:17: 12:6]`
   |
   = help: use parentheses to call the closure: `hello()`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
